index.htmlの場所をVscode開発中はstaticへ移動

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-  <link rel="stylesheet" href="../static/assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -56,7 +56,7 @@
   <div class="container">
     <div class="bg-hero text-center">
       <h2 class="img-title text-center">みんな笑顔な世界</h2>
-      <img class="img-thumbnail hero" src="../static/assets/images/smile4.png" >
+      <img class="img-thumbnail hero" src="assets/images/smile4.png" >
     </div>
     <div class="acts">
       <h2 class="my-3">やること</h2>
@@ -99,6 +99,6 @@
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  <script src="../static/assets/js/mamdragdrop.js"></script>
+  <script src="assets/js/mamdragdrop.js"></script>
 </body>
 </html>
